# sdk-python

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.openapi-generator/: FILES
.openapi-generator-templates/: README.md  configuration.mustache
design/: jwt-auth-monopoly.md  jwt-auth.md
docs/: AddManagedSchemaRequest.md  AddManagedTableDecl.md  AddManagedTableRequest.md  ApiErrorDetail.md  ApiErrorResponse.md  AsyncQueryResponse.md  AttachDatabaseCatalogRequest.md  BatchCreateUploadRequest.md  BatchCreateUploadResponse.md  BooleanProfileDetail.md  CategoricalProfileDetail.md  CategoryValueInfo.md  ColumnDefinition.md  ColumnInfo.md  ColumnProfileDetail.md  ColumnProfileDetailOneOf.md  ColumnProfileDetailOneOf1.md  ColumnProfileDetailOneOf2.md  ColumnProfileDetailOneOf3.md  ColumnProfileDetailOneOf4.md  ColumnProfileInfo.md  ColumnTypeSpec.md  ConnectionHealthResponse.md  ConnectionInfo.md  ConnectionRefreshResult.md  ConnectionSchemaError.md  ConnectionTypeDetail.md  ConnectionTypeSummary.md  ConnectionTypesApi.md  ConnectionsApi.md  CreateConnectionRequest.md  CreateConnectionResponse.md  CreateDatabaseRequest.md  CreateDatabaseResponse.md  CreateDatasetRequest.md  CreateDatasetResponse.md  CreateEmbeddingProviderRequest.md  CreateEmbeddingProviderResponse.md  CreateIndexRequest.md  CreateSandboxRequest.md  (+138 more)
hotdata/: __init__.py  _auth.py  _retry.py  _upload_watchdog.py  api_client.py  arrow.py  configuration.py  exceptions.py  (+3 more)
(+404 files in other folders)
