[project]
name = "hotdata"
version = "0.1.0"
description = "Python client for the HotData API"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotdata"]
